Fix potential crash with the Similar Artists applet.

Thanks to Tuomas Nurmi <tuomas@norsumanageri.org> for the patch.

BUG: 263145